--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ background-color: green;
 					<div class=" row my-2  d-flex justify-content-between align-items-center">
 
 						<div class="col-12">
-							<a href="#" class=" text-center project-btn" > View Project</a>
+							<a href="./royal-stone-sadashivpet.html" class=" text-center project-btn" > View Project</a>
 						</div>
 
 					</div>
@@ -409,7 +409,7 @@ background-color: green;
 
 
 						<div class="col-12">
-							<a href=""  class=" text-center project-btn" > View Project</a>
+							<a href="./konapur-sadasivpet.html"  class=" text-center project-btn" > View Project</a>
 						</div>
 
 					</div>
@@ -452,7 +452,7 @@ background-color: green;
 					</div>
 					<div class=" row my-2  d-flex justify-content-between align-items-center">
 						<div class="col-12">
-							<a href="" class=" text-center project-btn" > View Project</a>
+							<a href="./mango-farm-house-sadashivpet.html" class=" text-center project-btn" > View Project</a>
 						</div>
 
 					</div>
@@ -496,7 +496,7 @@ background-color: green;
 
 
 						<div class="col-12">
-							<a href="" class=" text-center project-btn" > View Project</a>
+							<a href="./navya-milestone-sadasivpet.html" class=" text-center project-btn" > View Project</a>
 						</div>
 
 					</div>
@@ -666,25 +666,25 @@ overflow: hidden;
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="clients">
-                            <h3> <span>3+</span> </h3>
+                            <h3> <span class="counter-value">3</span> +</h3>
                             <h5>Year In Business</h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="clients">
-                            <h3> <span>1000+</span> </h3>
+                            <h3> <span class="counter-value">1000</span> +</h3>
                             <h5>Happy Clients</h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="clients">
-                            <h3> <span>10+</span> </h3>
+                            <h3> <span class="counter-value">10</span> +</h3>
                             <h5>Projects Completed</h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="clients">
-                            <h3> <span>50+</span> </h3>
+                            <h3> <span class="counter-value">50</span>+</h3>
                             <h5>Trained Staff</h5>
                         </div>
                     </div>
@@ -695,6 +695,8 @@ overflow: hidden;
 
         </style>
         <script>
+
+
 
         </script>
         <!-- Comparison Start -->
@@ -759,15 +761,7 @@ overflow: hidden;
         </div>
         <!-- Comparison Start -->
         <style>
-            .why-us div {
-                box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.219);
-                transition: 3s all;
-            }
-
-            .why-us div:hover {
-                box-shadow:inset 3px 3px 6px #ffd041,inset -3px -3px 6px #ffd041;
-                transform: scale(1.1);
-            }
+         
         </style>
 
         <!-- Testimonial Start -->
