--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active ">Home
+                        <a href="/" class="nav-item nav-link active ">Home
                         </a>
 
 
@@ -135,39 +135,7 @@
                 </div>
             </nav>
 <style>
-    .book-free-visit{
-       
-    }
-    .book-free-visit .nav-link.dropdown-toggle{
-        clip-path: none;
-        background-color: green;
-        border-radius: 20px;
-    }
-    #navbarCollapse > div > div.nav-item.dropdown.book-free-visit > a{
-        clip-path: none;
-        background-color: green;
-        border-radius: 20px;
-    }
-
-   
-    .book-free-visit .free-visit{
-       width: 300px;
-       left: -100px;
-    }
-    .book-free-visit .free-visit button{
-background-color: green;
-    }
-    .book-free-visit .free-visit .form-floating > .form-control,
-    .book-free-visit .free-visit .form-floating > .form-select {
-  height: calc(3rem + 2px);
-  padding: 1rem 0.75rem;
-}
-.book-free-visit .free-visit.form-floating > .form-control:focus ~ label,
-.book-free-visit .free-visit .form-floating > .form-control:not(:placeholder-shown) ~ label,
-.book-free-visit .free-visit .form-floating > .form-select ~ label {
-  opacity: 0.65;
-  transform: scale(0.6) translateY(-0.5rem) translateX(0.05rem);
-}
+    
 </style>
             <div class="container-xxl" style="padding: 0 !important;">
                 <div class="owl-carousel hero-carousel">
@@ -244,7 +212,7 @@ background-color: green;
 
 
         <!-- About Start -->
-        <div class="container-xxl invest py-5" style="background-color: #ffd041;">
+        <div class="container-xxl invest pt-5" style="background-color: #ffd041;">
             <div class="container px-lg-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.1s">
@@ -284,7 +252,7 @@ background-color: green;
                     </div>
                     <div class="col-lg-5">
                         <img class="img-fluid wow zoomIn owner" data-wow-delay="0.5s"
-                            src="img/IMG_7874-PhotoRoom.png-PhotoRoom-768x1152.png">
+                            src="img/SIRPHOTO.png">
                     </div>
                 </div>
             </div>
@@ -789,7 +757,7 @@ overflow: hidden;
                             given very detailed explanation of Plots.Raja Roy Promotors exceeded our expectations in
                             finding our dream home.</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client3.jpg"
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/team-1.jpg"
                                 style="width: 50px; height: 50px;">
                             <div class="ps-3">
                                 <h6 class="fw-bold mb-1">Nexon</h6>
