--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="/" class="nav-item nav-link active ">Home
+                        <a href="/" class="nav-item nav-link  ">Home
                         </a>
 
 
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="about.html" class="nav-item nav-link active">About</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu m-0">
@@ -178,7 +178,7 @@
 
 
         <!-- About Start -->
-        <div class="container-xxl py-5" style="background-color: #ffd041;">
+        <div class="container-xxl pt-5" style="background-color: #ffd041;">
             <div class="container px-lg-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.1s">
@@ -231,7 +231,7 @@
                     </div>
                     <div class="col-lg-5">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s"
-                            src="./img/IMG_7874-PhotoRoom.png-PhotoRoom.png">
+                            src="./img/SIRPHOTO.png">
                     </div>
                 </div>
             </div>
