--- a/mango-farm-house-sadashivpet.html
+++ b/mango-farm-house-sadashivpet.html
@@ -139,13 +139,11 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
-                            <h1 class="display-4 text-white animated slideInLeft">About Us</h1>
+                            <h1 class="display-4 text-white animated slideInLeft">Mango Farm House</h1>
                             <nav aria-label="breadcrumb">
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-
-                                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                                    
                                 </ol>
                             </nav>
                         </div>
