--- a/royal-stone-sadashivpet.html
+++ b/royal-stone-sadashivpet.html
@@ -135,17 +135,15 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header">
+            <div class="container-xxl py-5 bg-primary hero-header-Royalstone">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
-                            <h1 class="display-4 text-white animated slideInLeft">About Us</h1>
+                            <h1 class="display-4 text-white animated slideInLeft">Royal Stone Project</h1>
                             <nav aria-label="breadcrumb">
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-
-                                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                                   
                                 </ol>
                             </nav>
                         </div>
