--- a/gallery.html
+++ b/gallery.html
@@ -262,9 +262,16 @@
 
     <div class="whatsapp">
         <a href="https://wa.me/+918885667888" target="_blank">
-            <h4 class="vertical">Chat With Us!</h4>
+          <h4 class="vertical">Chat With Us!</h4>
+
+          <div class="notify">
+            <div class="notify-img">
+                <h2>Free Visit</h2>
+              <img src="./img/transt-car1.gif" alt="raja roy Promoters" />
+            </div>
+          </div>
         </a>
-    </div>
+      </div>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
