--- a/about.html
+++ b/about.html
@@ -449,7 +449,7 @@
                             given very detailed explanation of Plots.Raja Roy Promotors exceeded our expectations in
                             finding our dream home.</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client3.jpg"
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/team-1.jpg"
                                 style="width: 50px; height: 50px;">
                             <div class="ps-3">
                                 <h6 class="fw-bold mb-1">Nexon</h6>
@@ -544,8 +544,7 @@
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
-                                    target="_blank"></i></a>
+                           
 
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
