--- a/index.html
+++ b/index.html
@@ -604,13 +604,13 @@ overflow: hidden;
                             <h2 class="mb-2 ">We Also providing</h2>
                         </div>
 
-                        <p class="mb-2"><p class="mb-2">Farm-Lands: Farm lands provide vital sustenance, serving as the cornerstone of agricultural production. These fertile expanses not only cultivate crops but also foster biodiversity and ecological balance. They are the bedrock of food security, supporting communities and economies worldwide.</p>
+                        <p class="mb-2"><p class="mb-2"><b>Farm-Lands:</b> Farm lands provide vital sustenance, serving as the cornerstone of agricultural production. These fertile expanses not only cultivate crops but also foster biodiversity and ecological balance. They are the bedrock of food security, supporting communities and economies worldwide.</p>
                         
-                        <p class="mb-2 ">Construction: Our construction services are characterized by
+                        <p class="mb-2 "><b>Construction:</b> Our construction services are characterized by
                             precision, quality,
                             and sustainability. We bring architectural visions to life with a commitment to excellence
                             in every detail.It melds architectural vision with engineering precision to shape the built environment we inhabit.</p>
-                        <p class="mb-2 ">Commercial Plots: Our commercial Plots are vibrant hubs of business
+                        <p class="mb-2 "><b>Commercial Plots: </b> Our commercial Plots are vibrant hubs of business
                             and
                             innovation. They are designed to foster growth, with flexible spaces and strategic locations
                             that cater to diverse industries.Commercial plots offer prime locations for businesses to establish their presence, serving as strategic hubs for economic activity and growth.</p>
@@ -871,8 +871,7 @@ overflow: hidden;
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
-                                    target="_blank"></i></a>
+                            
 
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
