--- a/royal-stone-sadashivpet.html
+++ b/royal-stone-sadashivpet.html
@@ -183,21 +183,7 @@
                         <div class="section-title position-relative mb-4 pb-4">
                             <h1 class="mb-2">About Royal Stone Project</h1>
                         </div>
-                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to
-                            you. At our core, we're not just in the business of properties; we're in the business of
-                            making dreams come true. Whether you're buying, selling, or investing, we're here to guide
-                            you every step of the way. Explore the boundless opportunities that await you in the world
-                            of real estate.
-
-                            At RAJA ROY PRAMOTORS, we believe that a home is not just a physical space; it is a
-                            sanctuary where dreams are woven, memories are cherished, and lives are transformed. Our
-                            mission is to help you find the perfect place to call home, whether it’s your first step
-                            into the real estate market, an upgrade to accommodate a growing family, or an investment
-                            opportunity to secure your future.
-
-                            As a company, we are not just focused on transactions; we believe in building meaningful and
-                            long-lasting relationships. Our success is defined by the trust and satisfaction of our
-                            clients, and we are grateful to have played a role in the realization of countless dreams
+                        <p class="mb-4">The Royal Stone project is a groundbreaking endeavor in the realm of architectural innovation and urban development. Spearheaded by a consortium of visionary architects, engineers, and urban planners, the project aims to redefine the skylines of major cities worldwide. At its core, Royal Stone embodies a commitment to sustainability, blending cutting-edge design with eco-friendly materials and energy-efficient technologies. The architectural marvels envisioned within the project promise to seamlessly integrate with their surroundings while serving as iconic landmarks for generations to come. Beyond its aesthetic appeal, Royal Stone prioritizes functionality and user experience, striving to create spaces that enhance quality of life and foster community interaction. With a focus on resilience and adaptability, the project embraces the challenges of urbanization and climate change, offering innovative solutions for sustainable living in the 21st century. As Royal Stone unfolds, it stands as a testament to human ingenuity and our capacity to shape the world around us for the better, ushering in a new era of architectural excellence and urban vitality.
                         </p>
 
                      
@@ -410,9 +396,7 @@
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
-                                    target="_blank"></i></a>
-
+                            
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
                                     class="fab fa-linkedin-in"></i></a>
