--- a/royal-stone-sadashivpet.html
+++ b/royal-stone-sadashivpet.html
@@ -310,7 +310,7 @@
                                 <div class="property_video p0">
                                     <div class="thumb">
                                         <div class="wow slideInRight-t text-center animated animated" id="map-canvas" style="visibility: visible;">
-                                            <img class="map_img_icon" style="" src="https://esrprojects.com/assests/images/premium2.png" alt="Layout">
+                                            <img class="map_img_icon" style="" src="./img/royal-stone-plots.png" alt="Layout">
                                         </div>
                                     </div>
                                 </div>
@@ -322,16 +322,17 @@
                 <div class="col-lg-12">
                     <div class="application_statics mt30">
                         <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                            <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                 <h3 class="mb30 wow fadeInDown" style="visibility: visible;">Location <small class="float-right">MAHESHWARAM</small></h3>
                                 <div class="map">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3813.309157004892!2d78.41782880000001!3d17.106412499999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcbb17272006c37%3A0xd380d7cfe9e683ed!2sESR%20PREMIUM%20COUNTY!5e0!3m2!1sen!2sin!4v1696172009326!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
-                                <div class="property_video p0">
-                                    <div class="thumb">
-                                        <div class="wow slideInLeft-t animated animated" id="map-canvas" style="visibility: visible;">
-                                            <img class="map_img_icon" src="https://esrprojects.com/assests/images/premium3.png" width="100%" alt="Location">
-                                        </div>
+                                
+                            </div> -->
+                            <div class="property_video p0 col-lg-6 m-auto">
+                                <div class="thumb">
+                                    <div class="wow slideInLeft-t animated animated" id="map-canvas" style="visibility: visible;">
+                                        <img class="map_img_icon" src="./img/royal-stone-roadmap.png" width="100%" alt="Location">
                                     </div>
                                 </div>
                             </div>
@@ -339,7 +340,7 @@
                         <div class="row" style="margin-top:40px !important">
                             <div class="col-md-12 text-center" style="margin-top:5px">
                                     <div class="brochure">
-                                        <a href="https://esrprojects.com/assests/images/esrheights.pdf" target="_blank" style="width:100%">Download Brochure</a>	
+                                        <a href="./files/Royal Stone Broucher.pdf" target="_blank" style="width:100%">Download Brochure</a>	
                                    </div>
                             </div>
                         </div>
