--- a/navya-milestone-sadasivpet.html
+++ b/navya-milestone-sadasivpet.html
@@ -181,7 +181,7 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="section-title position-relative mb-4 pb-4">
-                            <h1 class="mb-2">About Royal Stone Project</h1>
+                            <h1 class="mb-2">About Navya Mile Stone</h1>
                         </div>
                         <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to
                             you. At our core, we're not just in the business of properties; we're in the business of
@@ -207,7 +207,7 @@
                     </div>
                     <div class="col-lg-5">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s"
-                            src="./img/project 1.webp">
+                            src="./img/project-3.webp">
                     </div>
                 </div>
             </div>
@@ -324,7 +324,7 @@
                                 <div class="property_video p0">
                                     <div class="thumb">
                                         <div class="wow slideInRight-t text-center animated animated" id="map-canvas" style="visibility: visible;">
-                                            <img class="map_img_icon" style="" src="https://esrprojects.com/assests/images/premium2.png" alt="Layout">
+                                            <img class="map_img_icon" style="" src="./img/navya-stone-plots.jpg" alt="Layout">
                                         </div>
                                     </div>
                                 </div>
@@ -338,13 +338,13 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                 <h3 class="mb30 wow fadeInDown" style="visibility: visible;">Location <small class="float-right">MAHESHWARAM</small></h3>
-                                <div class="map">
+                                <!-- <div class="map">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3813.309157004892!2d78.41782880000001!3d17.106412499999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcbb17272006c37%3A0xd380d7cfe9e683ed!2sESR%20PREMIUM%20COUNTY!5e0!3m2!1sen!2sin!4v1696172009326!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                </div>
+                                </div> -->
                                 <div class="property_video p0">
                                     <div class="thumb">
                                         <div class="wow slideInLeft-t animated animated" id="map-canvas" style="visibility: visible;">
-                                            <img class="map_img_icon" src="https://esrprojects.com/assests/images/premium3.png" width="100%" alt="Location">
+                                            <img class="map_img_icon" src="./img/navya-stone-roadmap.png" width="400px" alt="Location">
                                         </div>
                                     </div>
                                 </div>
@@ -353,7 +353,7 @@
                         <div class="row" style="margin-top:40px !important">
                             <div class="col-md-12 text-center" style="margin-top:5px">
                                     <div class="brochure">
-                                        <a href="https://esrprojects.com/assests/images/esrheights.pdf" target="_blank" style="width:100%">Download Brochure</a>	
+                                        <a href="./files/Navya Mile Stone Brochure.pdf" target="_blank" style="width:100%">Download Brochure</a>	
                                    </div>
                             </div>
                         </div>
