--- a/about.html
+++ b/about.html
@@ -243,11 +243,11 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h5>Our History</h5>
+                    <h2>Our History</h2>
                     <h3>Our Most Efficient Year</h3>
                 </div>
                 <div class="col-lg-6 py-3 wow fadeInUp" data-wow-delay="0.1s"">
-                    <h3 class=" m-5 wow ">RAJA ROY PRAMOTORS,2021</h3>
+                    <h3 class=" m-5 wow " style="color: black;">RAJA ROY PRAMOTORS,2021</h3>
                     <p class=" m-5">Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a
                     desire to create a
                     positive impact on people's lives. Our journey began with a small team of dedicated
@@ -257,10 +257,12 @@
                     building
                     a vast network of satisfied clients. Throughout this journey, our core values of integrity,
                     professionalism, and personalized service have remained at the forefront of everything we do.
+                    Driven by integrity, professionalism, and a relentless pursuit of excellence, Raja Roy Pramotors has thrived in the dynamic real estate landscape. Our journey has been marked by growth and innovation, fueled by a steadfast dedication to personalized service and client-centric approach. With each milestone, we reaffirm our commitment to transforming aspirations into realities, one property at a time.
                     </p>
                 </div>
-                <div class="col-lg-4"><img src="./img/coustomer review man.png" style="height:500px;"
-                        class="m-5 wow fadeInUp" data-wow-delay="0.1s" />
+                <div class="col-lg-4" style="height:400px;width: 700px;">
+                    <img src="./img/open1.png" 
+                        class="m-5 wow fadeInUp w-100 h-100" data-wow-delay="0.1s" />
                 </div>
             </div>
         </div>
@@ -298,7 +300,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h3>Our Mission</h3>
+                    <h3 class="text-dark">Our Mission</h3>
                 </div>
                 <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="m-5">At Raja Roy Promoters,our mission is to go beyond simply buying and selling
@@ -328,7 +330,7 @@
         <div class="container" style="background-color: #ffd041;">
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h3>OUR ETHICS & VALUES</h3>
+                    <h3 class="text-dark">OUR ETHICS & VALUES</h3>
                 </div>
                 <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p>Integrity: We operate with unwavering integrity, ensuring that every decision and action is
@@ -433,72 +435,96 @@
         <!-- Testimonial Start -->
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container px-lg-5">
-                <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
-                    data-wow-delay="0.1s" style="max-width: 600px;">
-
-                    <h3 class="mb-1">Customers Feedbacks</h3>
+              <div
+                class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                data-wow-delay="0.1s"
+                style="max-width: 600px"
+              >
+                <h3 class="mb-1 text-dark">Customers Feedbacks</h3>
+              </div>
+              <div class="owl-carousel testimonial-carousel">
+                <div
+                  class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+                >
+                  <div class="d-flex align-items-center flex-column">
+                    <img
+                      class="img-fluid flex-shrink-0 rounded-circle"
+                      src="img/team-1.jpg"
+                      style="width: 50px; height: 50px"
+                    />
+                    <div class="ps-3">
+                      <h6 class="fw-bold mb-1">Nexon</h6>
+                      <small>customer</small>
+                    </div>
+                  </div>
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px"
+                  >
+                    <i class="fa fa-quote-left text-white"></i>
+                  </div>
+                  <p class="mt-3">
+                    This Company has good collection of projects and staff was very
+                    friendly and given very detailed explanation of Plots.Raja Roy
+                    Promotors exceeded our expectations in finding our dream home.
+                  </p>
                 </div>
-                <div class="owl-carousel testimonial-carousel">
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                        <p class="mt-3">This Company has good collection of projects and staff was very friendly and
-                            given very detailed explanation of Plots.Raja Roy Promotors exceeded our expectations in
-                            finding our dream home.</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/team-1.jpg"
-                                style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Nexon</h6>
-                                <small>customer</small>
-                            </div>
-                        </div>
+    
+                <div
+                  class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+                >
+                  <div class="d-flex align-items-center flex-column">
+                    <img
+                      class="img-fluid flex-shrink-0 rounded-circle"
+                      src="img/client2.jpg"
+                      style="width: 50px; height: 50px"
+                    />
+                    <div class="ps-3">
+                      <h6 class="fw-bold mb-1">KAMALA</h6>
+                      <small>customer</small>
                     </div>
-
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                        <p class="mt-3">Padma sri helped me to choose good Plot. Really a budget friendly Company.
-                            Prices are affordable to buy the Plots & other services, for all Excellent service.
-
-                        </p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client2.jpg"
-                                style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">KAMALA</h6>
-                                <small>customer</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                        <p class="mt-3">I have been an investor with Raja Roy Promotors , and I am extremely pleased
-                            with my experience. From the very beginning, the company has demonstrated a commitment to
-                            excellence.</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/client01.jpg"
-                                style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Tejeshwara Rao</h6>
-                                <small> Invester</small>
-                            </div>
-                        </div>
-                    </div>
-
+                  </div>
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px"
+                  >
+                    <i class="fa fa-quote-left text-white"></i>
+                  </div>
+                  <p class="mt-3">
+                    Padma sri helped me to choose good Plot. Really a budget
+                    friendly Company. Prices are affordable to buy the Plots & other
+                    services, for all Excellent service.
+                  </p>
                 </div>
+                <div
+                  class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4"
+                >
+                  <div class="d-flex align-items-center flex-column justify-content-center">
+                    <img
+                      class="img-fluid flex-shrink-0 rounded-circle"
+                      src="img/client01.jpg"
+                      style="width: 50px; height: 50px"
+                    />
+                    <div class="ps-3">
+                      <h6 class="fw-bold mb-1">Tejeshwara Rao</h6>
+                      <small> Invester</small>
+                    </div>
+                  </div>
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px"
+                  >
+                    <i class="fa fa-quote-left text-white"></i>
+                  </div>
+                  <p class="mt-3">
+                    I have been an investor with Raja Roy Promotors , and I am
+                    extremely pleased with my experience. From the very beginning,
+                    the company has demonstrated a commitment to excellence.
+                  </p>
+                </div>
+              </div>
             </div>
-        </div>
+          </div>
 
         <!-- Testimonial End -->
 
