--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
                 class="position-relative shadow rounded border-top border-5 border-primary"
               >
                 <div class="text-center border-bottom p-4">
-                  <img src="./img/investment.webp" alt="" />
+                  <img src="./img/inestment.jpg" alt="" />
                 </div>
                 <div class="p-4 pt-5">
                   <h4 class="fw-bold text-center text-white">INVESTMENTS</h4>
@@ -952,7 +952,7 @@
             data-wow-delay="0.1s"
             style="max-width: 600px"
           >
-            <h3 class="mb-1">Customers Feedbacks</h3>
+            <h3 class="mb-1 text-dark">Customers Feedbacks</h3>
           </div>
           <div class="owl-carousel testimonial-carousel">
             <div
