--- a/konapur-sadasivpet.html
+++ b/konapur-sadasivpet.html
@@ -183,21 +183,11 @@
                         <div class="section-title position-relative mb-4 pb-4">
                             <h1 class="mb-2">About Konapur Project</h1>
                         </div>
-                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to
-                            you. At our core, we're not just in the business of properties; we're in the business of
-                            making dreams come true. Whether you're buying, selling, or investing, we're here to guide
-                            you every step of the way. Explore the boundless opportunities that await you in the world
-                            of real estate.
+                        <p class="mb-4">Konapur Project emerges as a flagship real estate endeavor, poised to redefine the landscape of contemporary living. Strategically located in a thriving neighborhood, this project offers a harmonious blend of urban convenience and suburban tranquility.</p>
 
-                            At RAJA ROY PRAMOTORS, we believe that a home is not just a physical space; it is a
-                            sanctuary where dreams are woven, memories are cherished, and lives are transformed. Our
-                            mission is to help you find the perfect place to call home, whether it’s your first step
-                            into the real estate market, an upgrade to accommodate a growing family, or an investment
-                            opportunity to secure your future.
-
-                            As a company, we are not just focused on transactions; we believe in building meaningful and
-                            long-lasting relationships. Our success is defined by the trust and satisfaction of our
-                            clients, and we are grateful to have played a role in the realization of countless dreams
+                            <p class="mb-4">Embracing the ethos of sustainable development, Konapur Project integrates eco-friendly features and green spaces, fostering a healthy and environmentally conscious lifestyle. Residents can immerse themselves in a wealth of recreational amenities.</p>
+                            
+                            <p class="mb-4">At the heart of Konapur Project lies a commitment to fostering a sense of belonging and community spirit. Through engaging social activities, events, and shared spaces, residents are encouraged to forge meaningful connections and create lasting memories. 
                         </p>
 
                      
