--- a/mango-farm-house-sadashivpet.html
+++ b/mango-farm-house-sadashivpet.html
@@ -181,23 +181,13 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="section-title position-relative mb-4 pb-4">
-                            <h1 class="mb-2">About Royal Stone Project</h1>
+                            <h1 class="mb-2">About Mango Farm House</h1>
                         </div>
-                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to
-                            you. At our core, we're not just in the business of properties; we're in the business of
-                            making dreams come true. Whether you're buying, selling, or investing, we're here to guide
-                            you every step of the way. Explore the boundless opportunities that await you in the world
-                            of real estate.
+                        <p class="mb-4">The Mango Farm House Project stands as an epitome of tranquility and luxury nestled amidst lush greenery and serene surroundings. This unique real estate venture offers a retreat from the hustle and bustle of city life, providing residents with an opportunity to immerse themselves in the beauty of nature. Set within sprawling mango orchards, the project offers an idyllic escape where one can indulge in leisurely strolls, bask in the warmth of the sun, and revel in the sights and sounds of the countryside.</p>
 
-                            At RAJA ROY PRAMOTORS, we believe that a home is not just a physical space; it is a
-                            sanctuary where dreams are woven, memories are cherished, and lives are transformed. Our
-                            mission is to help you find the perfect place to call home, whether it’s your first step
-                            into the real estate market, an upgrade to accommodate a growing family, or an investment
-                            opportunity to secure your future.
-
-                            As a company, we are not just focused on transactions; we believe in building meaningful and
-                            long-lasting relationships. Our success is defined by the trust and satisfaction of our
-                            clients, and we are grateful to have played a role in the realization of countless dreams
+                            <p class="mb-4"> Designed to harmonize with the natural landscape, each farmhouse in the Mango Farm House Project is a testament to elegance and comfort. Whether it's a cozy weekend getaway or a permanent residence, residents can expect nothing short of opulence and sophistication. With thoughtfully crafted interiors and modern amenities, every aspect of the farmhouse is tailored to enhance the quality of life and provide a sanctuary for relaxation and rejuvenation.</p>
+                            
+                                <p class="mb-4"> Beyond its picturesque setting, the Mango Farm House Project offers a plethora of recreational activities and facilities for residents to enjoy. From swimming pools and outdoor sports courts to lush gardens and picnic areas, there is no shortage of opportunities for leisure and entertainment. Moreover, the project ensures convenience with its proximity to essential amenities, ensuring that residents have everything they need within reach.
                         </p>
 
                      
@@ -207,7 +197,7 @@
                     </div>
                     <div class="col-lg-5">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s"
-                            src="./img/project 1.webp">
+                            src="./img/farm (5).jpeg">
                     </div>
                 </div>
             </div>
