--- a/investments.html
+++ b/investments.html
@@ -202,7 +202,7 @@
                             environment.Investing in the future of your plots requires a strategic approach.</p>
                     </div>
                     <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/investment.jpg">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/invest111.jpg">
                     </div>
                     <div class="col-lg-12 text-white">
                         <p> That considers long-term trends, potential risks, and opportunities for growth One promising
