modified:   mango-farm-house-sadashivpet.html

--- a/mango-farm-house-sadashivpet.html
+++ b/mango-farm-house-sadashivpet.html
@@ -314,7 +314,7 @@
                                 <div class="property_video p0">
                                     <div class="thumb">
                                         <div class="wow slideInRight-t text-center animated animated" id="map-canvas" style="visibility: visible;">
-                                            <img class="map_img_icon" style="" src="./img/mango-farm-plots.jpg" alt="Layout">
+                                            <img class="map_img_icon"  src="./img/mango-farm-plots.jpg" alt="Layout">
                                         </div>
                                     </div>
                                 </div>
